# qt-hass

./: CMakeLists.txt  controller.cpp  controller.h  hass.cpp  hass.h  main.cpp
config/: dashboards.yml
qml/: Clock.qml  Dashboard.qml  DetailsPopup.qml  EntityBase.qml  Hass.js  Main.qml  Settings.qml  Test1.qml  Test2.qml  VisualItemBase.qml  fonts.js  fonts.qml
qml/Cards/: Button.qml  Entity.qml  Horizontal-stack.qml  Light.qml  Rectangle.qml  Spacer.qml
qml/Cards/Custom/: MushroomClimateCard.qml  MushroomLightCard.qml
qml/Components/: Switch.qml
qml/Details/: Climate.qml  Light.qml
qml/Layouts/: BaseLayout.qml  GridStack.qml  HorizontalStack.qml  VerticalStack.qml
